--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,27 @@ version: "3.9"
 
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mini-mooc-web
     ports:
       - "8000:8000"
     volumes:
       - .:/app
+      - db_data:/app/db_data
     environment:
       - DJANGO_SETTINGS_MODULE=mooc.settings
+      - DEBUG=${DEBUG:-True}
+      - SECRET_KEY=${SECRET_KEY:-django-insecure-*=pbk@n7g&j(6**8goa&o0=w6i&@o&fj@xw1zx5f05rrfr1j-h}
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+volumes:
+  db_data:
 
